2002-12-16  Braden McDaniel  <braden@endoframe.com>

        * doc/doxygen-footer, doc/doxygen-header, doc/openvrml.css:
          Documentation enhancements.

2002-12-14  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Removed text2
          method.  We no longer depend on glut for text rendering.  As a
          side effect, we don't have a means of reporting the frames-
          per-second in the renderer; but that's code that needs to be
          refactored anyway.

        * src/openvrml/OpenVRML/doc2.cpp:  Changed HAVE_ZLIB to
          OPENVRML_ENABLE_GZIP to match configure.ac changes.

2002-12-13  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Viewer.h:  Tab elimination.

2002-12-11  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp:  Fixed problem with
          initializing MFStrings with "new String()" objects in
          JavaScript.  This is a general fix that converts *any*
          argument to a JSString before making the assignment to the
          MFString element.  This behavior is consistent with that of
          the String object constructor.

        * src/openvrml/OpenVRML/script.cpp:  Treat SFInt32 values and
          MFInt32 elements in JavaScript as JavaScript numerics (double
          precision) rather than JavaScript integers.  ECMAScript
          doesn't have distinct integer and floating point types.

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed conditional
          sections for OPENVRML_ENABLE_TEXT_NODE.

2002-12-10  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp:  MSVC6 doesn't like in-class
          initialization of static const integers.  Use enum instead.

        * README, configure.ac, openvrml.pc.in,
          src/openvrml/OpenVRML/Makefile.am,
          src/openvrml/OpenVRML/Viewer.h,